--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "gulp-minify-code": "^1.0.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
     "jquery": "^3.1.1",
     "live-refresh": "^2.0.0"
   },
   "dependencies": {
     "materialize-css": "^0.97.8",
-    "sass": "^0.5.0",
     "select2": "^4.0.3"
   }
 }
