--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
+    "jshint": "^2.9.4",
     "live-refresh": "^2.0.0"
   },
   "dependencies": {
