--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "live-refresh": "^2.0.0"
   },
   "dependencies": {
+    "express": "^4.14.0",
     "jquery": "^3.1.1",
     "materialize-css": "^0.97.8",
     "select2": "^4.0.3"
